--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-.kaggle/kaggle.json
-database/olist_customers_dataset.csv 
-database/olist_geolocation_dataset.csv 
-database/olist_order_items_dataset.csv 
-database/olist_order_payments_dataset.csv 
-database/olist_order_reviews_dataset.csv 
-database/olist_orders_dataset.csv 
-database/olist_products_dataset.csv 
-database/olist_sellers_dataset.csv 
-database/product_category_name_translation.csv
+olist_customers_dataset.csv 
+olist_geolocation_dataset.csv 
+olist_order_items_dataset.csv 
+olist_order_payments_dataset.csv 
+olist_order_reviews_dataset.csv 
+olist_orders_dataset.csv 
+olist_products_dataset.csv 
+olist_sellers_dataset.csv 
+product_category_name_translation.csv
+openai_api_key.py
